# caas-api

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md
.cargo/: audit.toml
.github/workflows/: ci.yml  deploy.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_validate_password_strength.rs  fuzz_validate_safe_text.rs
migrations/: 0001_create_developer_clients.sql  0002_add_password_hash.sql  0003_create_api_requests.sql  0004_add_api_salt.sql  0005_email_verification.sql  0006_totp.sql
src/: config.rs  errors.rs  main.rs  validation.rs
src/middleware/: auth.rs  idempotency.rs  mod.rs  request_tracker.rs  signature.rs
src/models/: auth.rs  token.rs  user.rs
src/routes/: auth.rs  health.rs  mod.rs  tokens.rs  users.rs
src/services/: auth.rs  db.rs  email.rs  mod.rs  rabbitmq.rs
