[package]
name = "caas-api"
version = "0.1.0"
edition = "2021"
description = "Crypto as a Service — REST API for ERC-20/721/1155 token operations"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.20", features = ["derive"] }
regex = "1"

# Auth — JWT + API key / client secret
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"

# RabbitMQ (async)
lapin = "2"
deadpool-lapin = "0.12"

# Database (PostgreSQL — developer credentials, API keys)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Env & config
dotenvy = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Sentry
sentry = "0.34"

# HMAC for client secret signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Password hashing (bcrypt — for developer portal accounts)
bcrypt = "0.15"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tokio-test = "0.4"
