[package]
name = "caas-api"
version = "0.1.0"
edition = "2021"
description = "Crypto as a Service — REST API for ERC-20/721/1155 token operations"
license = "MIT"

[lib]
name = "caas_api"
path = "src/lib.rs"

[[bin]]
name = "caas-api"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.20", features = ["derive"] }
regex = "1"

# Auth — JWT + API key / client secret
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"

# RabbitMQ (async)
lapin = "2"
deadpool-lapin = "0.12"

# Redis (idempotency cache + session)
deadpool-redis = "0.15"

# Database (PostgreSQL — developer credentials, API keys)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Env & config
dotenvy = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Sentry
sentry = { version = "0.34", features = ["tracing"] }

# HMAC for client secret signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Password hashing (bcrypt — for developer portal accounts)
bcrypt = "0.15"

# TOTP (RFC 6238) — two-factor authentication
totp-rs = { version = "5", features = ["otpauth"] }
data-encoding = "2"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Email (SES via SMTP)
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-native-tls", "smtp-transport", "hostname", "builder"] }

[dev-dependencies]
tokio-test = "0.4"
